refactor: :recycle: 重构panel相关

--- a/styles/common/function.scss
+++ b/styles/common/function.scss
@@ -68,6 +68,10 @@
   @return $map;
 }
 
+@function is-important($important){
+  @return #{if($important, '!important', '')};
+}
+
 //Fluent Design
 @function fluent-shadow($dp) {
   $y1: 0.4px;
