--- a/styles/panel/index.scss
+++ b/styles/panel/index.scss
@@ -1,1 +1,15 @@
 @use "block-icons";
+
+@use "file-tree";
+
+@use "outline";
+
+@use "graph";
+
+@use "loading";
+
+@use "full-screen";
+
+@use "pop-over";
+
+@use "emojis";
