--- a/styles/common/css-var.scss
+++ b/styles/common/css-var.scss
@@ -9,18 +9,18 @@
   --b3-theme-primary-lightest: rgba(var(--brand-base), 0.12);
   --b3-theme-secondary: rgb(var(--warning-base));
   --b3-theme-background: rgb(var(--bg-page));
-  --b3-theme-background-light: rgb(var(--fill-base));
+  --b3-theme-background-light: rgb(var(--hover-page));
   --b3-theme-surface: rgb(var(--bg-base));
   --b3-theme-surface-light: rgb(var(--bg-base));
   --b3-theme-error: rgb(var(--error-base));
 
   // 文字颜色
-  --b3-theme-on-primary: rgb(var(--text-anti));
-  --b3-theme-on-secondary: rgb(var(--text-anti));
-  --b3-theme-on-background: rgb(var(--text-primary));
-  --b3-theme-on-surface: rgb(var(--text-secondary));
-  --b3-theme-on-surface-light: rgb(var(--text-placeholder));
-  --b3-theme-on-error: rgb(var(--text-anti));
+  --b3-theme-on-primary: var(--text-anti);
+  --b3-theme-on-secondary: var(--text-anti);
+  --b3-theme-on-background: var(--text-primary);
+  --b3-theme-on-surface: var(--text-secondary);
+  --b3-theme-on-surface-light: var(--text-placeholder);
+  --b3-theme-on-error: var(--text-anti);
 
   // 线条
   --b3-border-color: rgb(var(--border-3));
