--- a/styles/layout/index.scss
+++ b/styles/layout/index.scss
@@ -1,3 +1,4 @@
+@use "body";
 // 顶栏
 @use "top-bar";
 // 边栏
@@ -14,7 +15,3 @@
 @use "resize";
 //空白界面
 @use "empty";
-
-body.body--win32 {
-  border: none;
-}
