--- a/styles/layout/scroller.scss
+++ b/styles/layout/scroller.scss
@@ -2,7 +2,7 @@
 @use "../common" as *;
 
 $thumb-bg: map.get($scroll, "base");
-$track-bg: transparent; //map.get($scroll, "track");
+$track-bg: transparent; //map.get($bg, "page");
 
 :root {
   // 滚动条
@@ -37,7 +37,7 @@ $track-bg: transparent; //map.get($scroll, "track");
 // Scrollbar
 ::-webkit-scrollbar {
   z-index: 1;
-  width: 12px;
+  width: 8px;
 
   &:horizontal {
     height: 6px;
@@ -48,9 +48,9 @@ $track-bg: transparent; //map.get($scroll, "track");
     box-sizing: content-box;
     box-shadow: inset 0 0 6px 6px $thumb-bg;
     background: unset;
-    border: solid 4px transparent;
+    border: solid 3px transparent;
     &:hover {
-      border: solid 2px transparent;
+      border: solid 1.5px transparent;
     }
   }
 
