--- a/styles/layout/status.scss
+++ b/styles/layout/status.scss
@@ -2,12 +2,11 @@
 @use "../common" as *;
 
 $s-h: 22px;
-$text-color: map.get($text, "secondary");
 
 #status {
   // 右下角按钮
   .toolbar__item {
-    @include btn-on-base();
+    @include item("base");
     @include svg-div(30px, $s-h, 10px);
     border-radius: unset;
   }
@@ -35,8 +34,8 @@ $text-color: map.get($text, "secondary");
   // 状态栏
   .status__msg {
     display: flex;
-    color: $text-color;
     margin-left: 45px - 30px;
+    @include v-center($s-h);
 
     &:not(:empty):before {
       content: "";
@@ -44,7 +43,12 @@ $text-color: map.get($text, "secondary");
       width: 12px;
       height: 12px;
       margin: 5px;
-      @include add_icon("notifications", $text-color, 24, round);
+      @include add-icon(
+        "notifications",
+        map.get($text, "secondary"),
+        24,
+        round
+      );
     }
   }
 
@@ -54,7 +58,6 @@ $text-color: map.get($text, "secondary");
 
   // 文档统计
   .status__counter {
-    color: $text-color;
     transform: translateX(-30px - 2px);
   }
 }
