--- a/styles/layout/top-bar.scss
+++ b/styles/layout/top-bar.scss
@@ -8,8 +8,7 @@
 $bar-h: 30px;
 $item-h: 22px;
 
-$close-color: #fff;
-$close-bg: rgba(232, 17, 35, 0.9);
+$win-control-w: 46px;
 
 $map: (
   "DailyNote": (
@@ -38,13 +37,14 @@ $map: (
   ),
 );
 
-@mixin item {
+@mixin top-item {
+  @include item("base");
+  @include component();
   width: 28px + 8px * 2;
   height: $item-h;
   margin: auto 0;
   padding: 0;
   cursor: unset;
-  border-radius: map.get($radius, "base");
 }
 
 @mixin item-before($content) {
@@ -62,7 +62,7 @@ $map: (
 }
 
 @mixin win-control($svg-w) {
-  @include svg-div(46px, $bar-h, $svg-w);
+  @include svg-div($win-control-w, $bar-h, $svg-w);
   &::after {
     display: none;
   }
@@ -99,8 +99,6 @@ $map: (
   }
 
   &__item {
-    @include btn-on-base();
-
     &::after {
       top: $item-h !important;
       left: 35%;
@@ -108,7 +106,7 @@ $map: (
 
     @each $id, $contents in $map {
       &#bar#{$id} {
-        @include item();
+        @include top-item();
         @include item-before(list.nth($contents, 1));
         &::after {
           @if list.nth($contents, 2) {
@@ -123,7 +121,7 @@ $map: (
 
     &#barBack,
     &#barForward {
-      @include item();
+      @include top-item();
       @include svg-div(10px + 12px * 2, $item-h, 10px);
       &.toolbar__item--disabled {
         @include item-disabled();
@@ -140,15 +138,10 @@ $map: (
 
     &#closeWindow {
       @include win-control(10px);
-
-      &:hover {
-        color: $close-color;
-        background-color: $close-bg;
-      }
     }
   }
 
-  .fn__ellipsis {
+  #drag {
     @include v-center($bar-h);
   }
 
