--- a/styles/protyle/block/_block-code.scss
+++ b/styles/protyle/block/_block-code.scss
@@ -62,7 +62,7 @@ $code-action-bg-active: $gray-4;
         width: 8px;
         height: 20px;
         margin-left: 5px;
-        @include add_icon(
+        @include add-icon(
           "expand_more",
           $rc-text-placeholder,
           18,
