--- a/styles/components/index.scss
+++ b/styles/components/index.scss
@@ -1,5 +1,5 @@
-// //按钮
-// @use "button";
+//按钮
+@use "button";
 //表单
 @use "form";
 //输入框
@@ -8,13 +8,13 @@
 @use "list";
 //菜单
 @use "menu";
-// //选择菜单
-// @use "select";
-// //滑条
-// @use "slider";
-// //通知弹窗
-// @use "snackbar";
-// //开关
-// @use "switch";
+//选择菜单
+@use "select";
+//滑条
+@use "slider";
+//通知弹窗
+@use "snackbar";
+//开关
+@use "switch";
 //提示条
 @use "tooltips";
