--- a/styles/components/tooltips.scss
+++ b/styles/components/tooltips.scss
@@ -13,8 +13,8 @@ $t-bg: map.get($bg, "pop");
   background-color: $t-bg;
   color: map.get($text, "primary");
   padding: 6px 8px;
-  border-radius: map.get($radius, "small");
-  z-index: map.get($z-index,"top");
+  border-radius: map.get($radius, "base");
+  z-index: map.get($z-index, "top");
 }
 
 //tips
