--- a/styles/common/mixins.scss
+++ b/styles/common/mixins.scss
@@ -71,7 +71,7 @@
   @include item("component");
   width: auto;
   margin: 0;
-  border-radius: map.get($radius, "exsmall");
+  border-radius: map.get($radius, "small");
   padding: 0 math.div($h - 8px, 2);
   &::after {
     display: none !important;
