--- a/styles/panel/graph.scss
+++ b/styles/panel/graph.scss
@@ -41,9 +41,9 @@
 
   &__loading {
     background-color: map.get($bg, "component");
-    border-radius: map.get($radius, "small");
+    border-radius: map.get($radius, "base");
     > div {
-      border-radius: map.get($radius, "small");
+      border-radius: map.get($radius, "base");
     }
   }
 }
